@@ -8,6 +8,7 @@ CHANGELOG for Fall of Eden
 Version 0.4k
 ------------
 * Asche's magic box now counts toward purchases for tasks
+* Added quest log entries for Vaughn's second and third task
 
 --------------------------------------------
              PREVIOUS VERSIONS
